# metal0

./: -Doptimize=ReleaseFast  .gitignore  AGENT_TASKS.md  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SIMD_IMPLEMENTATION.md  TECHNICAL_DEBT.md  bench_fib  bench_go  bench_json.py  bench_json_heavy.py  bench_json_python.py  bench_latency_go  bench_loop  bench_loop.hash  bench_scalability_go  bench_string  build.zig  pyproject.toml  runtime.zcs  test_lookup.zig  test_simple_closure.py
.claude/: CLAUDE.md  plan-stdlib.md
benchmarks/: README.md  async_http_bench.py  bench_fibonacci.sh  bench_startup.sh  bench_startup_results.md  common.sh  fibonacci_results.md  http_bench.py  json_bench.py  json_simd_bench.py  loop_sum.py  loop_sum_results.md  numpy_comparison.py  numpy_comparison_notes.md  numpy_numba_bench.py  numpy_results.md  run_benchmarks.sh  string_concat.py  string_concat_results.md
benchmarks/asyncio/rust_bench/: Cargo.toml
benchmarks/asyncio/rust_bench/src/: main.rs
docs/: OPTIMIZATION_DESIGN.md  architecture.md
examples/: README_NUMPY.md  assert_basic.py  async_web_crawler.py  bench_dict.py  bench_loop.py  bench_scalability_go.go  class_simple.py  dict_methods.py  for_loop.py  http_demo.py  import_simple.py  numpy_demo.py  string_methods.py  test_async_inline.py  test_dynamic_complete.py  test_exec_simple.py  test_imports_simple.py  test_sys_simple.py  test_type_fixes.py  toolz_utils.py
scripts/: benchmark_async_complete.sh  benchmark_dashboard.py
src/: ast.zig  build_dirs.zig  codegen.zig  compiler.zig  compiler_utils.zig  lexer.zig  (+5 more)
(+729 files in other folders)
